# EmotionalFreneticTyper

./: .gitignore  CMakeLists.txt  toDo.txt
game/: Animation.cpp  Animation.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Collidable.cpp  Collidable.h  CollidableAABBGameObject.cpp  CollidableAABBGameObject.h  CollidableBox.cpp  CollidableBox.h  CollidableCircle.cpp  CollidableCircle.h  CollidableLineSegmentArray.cpp  CollidableLineSegmentArray.h  Collision.h  EndState.cpp  EndState.h  ForceField.cpp  ForceField.h  Game.cpp  GameObject.cpp  GameObject.h  InputManager.cpp  KillingRectangle.cpp  KillingRectangle.h  Music.cpp  Music.h  Panel.cpp  Panel.h  PlataformasManager.cpp  PlataformasManager.h  PlayableEmotion.cpp  PlayableEmotion.h  PlaybleEmotion.cpp  PlaybleEmotion.h  Rect.cpp  Rect.h  (+30 more)
res/txt/: commandsDict.txt  openingConfig.txt  settings.txt  stage1config.txt
